crates/rskim-core/tests/snapshots/truncation_golden__md_simple_structure_max15.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(MD_SIMPLE, Language::Markdown,\nTransformConfig::with_mode(Mode::Structure).with_max_lines(15))"
---
# Main Title

## Section One

### Subsection 1.1

## Section Two

Setext Style H1
===============

Setext Style H2
---------------
