crates/rskim-core/tests/snapshots/truncation_golden__md_simple_structure_max5.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(MD_SIMPLE, Language::Markdown,\nTransformConfig::with_mode(Mode::Structure).with_max_lines(5))"
---
# Main Title

## Section One

<!-- ... (12 lines truncated) -->
