crates/rskim-core/tests/snapshots/truncation_golden__python_comments_pseudo_max5.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(PYTHON_COMMENTS, Language::Python,\nTransformConfig::with_mode(Mode::Pseudo).with_max_lines(5))"
---
#!/usr/bin/env python3
# FIXTURE: Python file with various comment types
# TESTS: Minimal mode comment stripping
