crates/rskim-core/tests/snapshots/truncation_golden__python_comments_pseudo_unbounded.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(PYTHON_COMMENTS, Language::Python,\nTransformConfig::with_mode(Mode::Pseudo))"
---
#!/usr/bin/env python3
# FIXTURE: Python file with various comment types
# TESTS: Minimal mode comment stripping

def add(x, y) -> int:
    """Add two numbers together.

    This is a docstring and should be preserved (KEEP).

    Args:
        x: first number
        y: second number

    Returns:
        The sum of x and y
    """
    # This comment is inside a function body (KEEP)
    result = x + y # inline comment in body (KEEP)
    return result


class Calculator:
    """A simple calculator class (KEEP)."""

    def __init__(value) -> None:
        """Initialize calculator (KEEP)."""
        self.value = value

    def add(x) -> int:
        """Add to stored value (KEEP)."""
        # body comment (KEEP)
        return self.value + x


VERSION = "1.0.0"
