crates/rskim-core/tests/snapshots/truncation_golden__python_comments_structure_max15.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(PYTHON_COMMENTS, Language::Python,\nTransformConfig::with_mode(Mode::Structure).with_max_lines(15))"
---
#!/usr/bin/env python3
# FIXTURE: Python file with various comment types
# ... (6 lines truncated)
def add(x: int, y: int) -> int:
     {...}
# ... (16 lines truncated)
class Calculator:
    """A simple calculator class (KEEP)."""

    def __init__(self, value: int) -> None:
         {...}

    def add(self, x: int) -> int:
         {...}
# ... (12 lines truncated)
