crates/rskim-core/tests/snapshots/truncation_golden__python_comments_structure_unbounded.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(PYTHON_COMMENTS, Language::Python,\nTransformConfig::with_mode(Mode::Structure))"
---
#!/usr/bin/env python3
# FIXTURE: Python file with various comment types
# TESTS: Minimal mode comment stripping

# This is a regular comment at module level (STRIP)

# Another regular comment (STRIP)

def add(x: int, y: int) -> int:
     {...}

# Regular comment between functions (STRIP)

class Calculator:
    """A simple calculator class (KEEP)."""

    def __init__(self, value: int) -> None:
         {...}

    def add(self, x: int) -> int:
         {...}

# Regular module-level comment (STRIP)




# Test blank line normalization: 4+ blank lines above (normalize to 2)

VERSION = "1.0.0"
